[package]
name = "m3u8-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
url = {version="2.2.2"}
pbr = {version = "1.0.4"}
rand = {version = "0.8.5"}